<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NotificationSettingActivity">


    <include
        android:id="@+id/toolbar_notif"
        layout="@layout/toolbar_app"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_reminder"
        app:layout_constraintTop_toBottomOf="@id/toolbar_notif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/reminder_showing_the_movie_that_released_today"
        android:textColor="@color/textColorDark"/>

    <TextView
        android:id="@+id/tv_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_reminder"
        app:layout_constraintTop_toBottomOf="@id/switch_release"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/reminder_for_return_to_this_app"
        android:textColor="@color/textColorDark"/>


<!--    <Button-->
<!--        android:id="@+id/btn_notif"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Push Notif"-->
<!--        app:layout_constraintTop_toBottomOf="@id/switch_daily"-->
<!--        android:layout_marginTop="32dp"/>-->



</androidx.constraintlayout.widget.ConstraintLayout>