<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context=".activity.DetailActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_app"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <ImageView
            android:id="@+id/iv_backrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@color/cardview_dark_background"
            android:scaleType="centerCrop"
            android:alpha="0.5"/>

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_marginTop="155dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/iv_backrop"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@color/design_default_color_primary_dark"
            android:elevation="16dp"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_backrop"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/value_title"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:text="@string/release_date"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release_date"
            android:text="@string/value_release_date"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/garis_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="380dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/garis_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.333"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/garis_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.666"/>

        <ImageView
            android:id="@+id/icon_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_vote_count_black_24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/garis_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/garis_2"/>

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_vote_count"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_vote_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/garis_2"/>

        <ImageView
            android:id="@+id/icon_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_star_vote_average_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/garis_1"
            app:layout_constraintStart_toStartOf="@id/garis_2"
            app:layout_constraintEnd_toStartOf="@id/garis_3"/>

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_vote_average"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_vote_average"
            app:layout_constraintStart_toStartOf="@id/garis_2"
            app:layout_constraintEnd_toStartOf="@id/garis_3"/>

        <ImageView
            android:id="@+id/icon_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_language_black_24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/garis_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/garis_1"/>

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_language"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_language"
            app:layout_constraintStart_toStartOf="@id/garis_3"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_count"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/value_overview"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:lineSpacingExtra="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>